changes for the return guide

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   </div>
   <button id="startButton">Start Animation</button>
   <button id="stopButton">Stop Animation</button>
+  <div>
+    <br>
+    <h1>How many clicks?:</h1>
+    <h2 id="count-el">0</h2>
+    <button id="increment-btn" onclick="increment()">INCREMENT</button>
+  </div>
   <script src="main.js"></script>
 </body>
 </html>
